<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="@dimen/general_activity_vertical_margin">

    <TextView
        android:id="@+id/lblName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/txtName"
        android:text="@string/activity_main_lblName"/>

    <EditText
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text|textPersonName"
        tools:text="@tools:sample/first_names">

        <requestFocus/>
    </EditText>

    <CheckBox
        android:id="@+id/chkPolite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/general_activity_vertical_margin"
        android:checked="false"
        android:text="@string/main_activity_polite_mode"/>

    <Button
        android:id="@+id/btnGreet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/general_activity_vertical_margin"
        android:text="@string/activity_main_btnGreet"/>

</LinearLayout>